[package]
name = "xilem_svg"
version = "0.1.0"
description = "SVG DOM frontend for the Xilem Rust UI framework."
keywords = ["xilem", "svg", "dom", "web", "ui"]
categories = ["gui", "web-programming"]
publish = false # Until it's ready
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-pc-windows-msvc"
# rustdoc-scrape-examples tracking issue https://github.com/rust-lang/rust/issues/88791
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lib]
crate-type = ["cdylib"]

[dependencies]
xilem_core.workspace = true
kurbo.workspace = true
bitflags = "2"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "PointerEvent",
    "SvgElement",
    "Window",
]
