[package]
name = "xilem_web"
version = "0.1.0"
description = "HTML DOM frontend for the Xilem Rust UI framework."
keywords = ["xilem", "html", "dom", "web", "ui"]
categories = ["gui", "web-programming"]
publish = false # Until it's ready
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-pc-windows-msvc"
# rustdoc-scrape-examples tracking issue https://github.com/rust-lang/rust/issues/88791
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints]
workspace = true

[dependencies]
xilem_core.workspace = true
kurbo.workspace = true
bitflags = "2"
wasm-bindgen = "0.2.87"
paste = "1"
log = "0.4.19"
gloo = { version = "0.8.1", default-features = false, features = ["events", "utils"] }
peniko = "0.1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "console",
    "CssStyleDeclaration",
    "Document",
    "DomTokenList",
    "Element",
    "Event",
    "HtmlElement",
    "Node",
    "NodeList",
    "SvgElement",
    "SvgaElement",
    "SvgAnimateElement",
    "SvgAnimateMotionElement",
    "SvgAnimateTransformElement",
    "SvgCircleElement",
    "SvgClipPathElement",
    "SvgDefsElement",
    "SvgDescElement",
    "SvgEllipseElement",
    "SvgfeBlendElement",
    "SvgfeColorMatrixElement",
    "SvgfeComponentTransferElement",
    "SvgfeCompositeElement",
    "SvgfeConvolveMatrixElement",
    "SvgfeDiffuseLightingElement",
    "SvgfeDisplacementMapElement",
    "SvgfeDistantLightElement",
    "SvgfeDropShadowElement",
    "SvgfeFloodElement",
    "SvgfeFuncAElement",
    "SvgfeFuncBElement",
    "SvgfeFuncGElement",
    "SvgfeFuncRElement",
    "SvgfeGaussianBlurElement",
    "SvgfeImageElement",
    "SvgfeMergeElement",
    "SvgfeMergeNodeElement",
    "SvgfeMorphologyElement",
    "SvgfeOffsetElement",
    "SvgfePointLightElement",
    "SvgfeSpecularLightingElement",
    "SvgfeSpotLightElement",
    "SvgfeTileElement",
    "SvgfeTurbulenceElement",
    "SvgFilterElement",
    "SvgForeignObjectElement",
    "SvggElement",
    # "SvgHatchElement",
    # "SvgHatchpathElement",
    "SvgImageElement",
    "SvgLineElement",
    "SvgLinearGradientElement",
    "SvgMarkerElement",
    "SvgMaskElement",
    "SvgMetadataElement",
    "SvgmPathElement",
    "SvgPathElement",
    "SvgPatternElement",
    "SvgPolygonElement",
    "SvgPolylineElement",
    "SvgRadialGradientElement",
    "SvgRectElement",
    "SvgScriptElement",
    "SvgSetElement",
    "SvgStopElement",
    "SvgStyleElement",
    "SvgsvgElement",
    "SvgSwitchElement",
    "SvgSymbolElement",
    "SvgTextElement",
    "SvgTextPathElement",
    "SvgTitleElement",
    "SvgtSpanElement",
    "SvgUseElement",
    "SvgViewElement",
    "Text",
    "Window",
    "FocusEvent",
    "HtmlInputElement",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "PointerEvent",
    "WheelEvent",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlDListElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlLinkElement",
    "HtmlMapElement",
    "HtmlMediaElement",
    "HtmlMenuElement",
    "HtmlMeterElement",
    "HtmlModElement",
    "HtmlObjectElement",
    "HtmlOListElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlPictureElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlQuoteElement",
    "HtmlScriptElement",
    "HtmlSelectElement",
    "HtmlSlotElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlTableCaptionElement",
    "HtmlTableCellElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTemplateElement",
    "HtmlTimeElement",
    "HtmlTextAreaElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlVideoElement",
]
