[package]
name = "components"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "components"
test = false
doctest = false
doc = false
bench = false

[lints]
workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
time = { workspace = true, features = ["formatting", "local-offset", "macros", "wasm-bindgen"] }
wasm-bindgen = "0.2.108"
web-sys = "0.3.85"
xilem_web = { path = "../.." }
