[package]
name = "counter"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "counter"
test = false
doctest = false
doc = false
bench = false

[lints]
workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.104"
web-sys = "0.3.81"
xilem_web = { path = "../.." }
