[package]
name = "counter"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "counter"
test = false
doctest = false
doc = false
bench = false

[lints]
workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.108"
web-sys = "0.3.85"
xilem_web = { path = "../.." }
