[package]
name = "elm"
version = "0.0.0" # not versioned
publish = false
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.22"
xilem_web = { path = "../.." }
