[package]
name = "elm"
version = "0.0.0" # not versioned
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "elm"
test = false
doctest = false
doc = false
bench = false

[lints]
workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.27"
xilem_web = { path = "../.." }
