[package]
name = "fetch"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
gloo-net = { version = "0.6.0", default-features = false, features = ["http", "json", "serde"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
web-sys = { version = "0.3.69", features = ["Event", "HtmlInputElement"] }
wasm-bindgen = "0.2.92"
xilem_web = { path = "../.." }
