[package]
name = "fetch"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "fetch"
test = false
doctest = false
bench = false

[lints]
workspace = true

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
gloo-net = { version = "0.6.0", default-features = false, features = ["http", "json", "serde"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
web-sys = { version = "0.3.77", features = ["Event", "HtmlInputElement"] }
wasm-bindgen = "0.2.100"
xilem_web = { path = "../.." }
