[package]
name = "fetch"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "fetch"
test = false
doctest = false
doc = false
bench = false

[lints]
workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-net = { version = "0.6.0", default-features = false, features = ["http", "json", "serde"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
web-sys = { version = "0.3.85", features = ["Event", "HtmlInputElement"] }
wasm-bindgen = "0.2.108"
xilem_web = { path = "../.." }
