[package]
name = "fetch_event_handler"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
console_error_panic_hook = "0.1"
console_log = "1"
futures = "0.3.30"
gloo-net = { version = "0.5.0", default-features = false, features = ["http", "json", "serde"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
web-sys = { version = "0.3.69", features = ["Event", "HtmlInputElement"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
xilem_web = { path = "../.." }
